--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel='stylesheet' href='style.css'/>
-
+<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+<body>
 <div id="welcome" class="welcome">
-
-<h1> Shane Linville</h1>
-<p>Web Developer</p>
+<div class="overlay">
+<h1>Shane Linville</h1>
+<h2>Web Developer</h2>
+<a href="home.html">Enter</a>
 </div>
-
+</div>
+</body>
 
 </html>
