--- a/home.html
+++ b/home.html
@@ -12,5 +12,17 @@
 <li><a href="experience.html">Experience</a></li>
 </ul>
 </nav>
+<body>
+<div class="header">
+<h1>Shane Linville</h1>
+<p>Web Developer</p>
+</div>
 
+<div class="projects">
+<div>
+<h2>Meagan Linville Photography</h2>
+</div>
+
+</div>
+</body>
 </html>
