--- a/home.html
+++ b/home.html
@@ -1,28 +1,60 @@
-<!--doctype html-->
+<!doctype html>
 
 <html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel='stylesheet' href='style.css'/>
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<div id="header" class="header">
+<h1>Shane Linville</h1>
+<p>Kansas City Missouri</p>
+<div class="social">
+<a class="fa fa-facebook"></a>
+<a class="fa fa-linkedin"></a>
+<a class="fa fa-github"></a>
+<a class="fa fa-twitter"></a>
+</div>
+</div>
 <nav>
 <ul id="navbar">
-<li><a href="work.html">Work</a></li>
-<li> <a href="contact.html">Contact</a></li>
-<li><a href="experience.html">Experience</a></li>
+<li><a href="#work.html">Work</a></li>
+<li> <a href="#contact.html">Contact</a></li>
+<li><a href="#experience.html">Experience</a></li>
+<li><a href="#blog.html">Blog</a></li>
 </ul>
 </nav>
 <body>
-<div class="header">
-<h1>Shane Linville</h1>
-<p>Web Developer</p>
+<div class="hello">
+<h1>Simple Modern Web Development</h1>
+<img src="assets/abstract-art-bright-134.jpg">
+<div class="row">
+<div class="col-2">
+<h1>Small Business</h1>
+<img id="smallBus" src="assets/attractive-bar-barista-296888.jpg">
+</div>
+<div class="col-4">
+<h1>Non-Profit</h1> 
+<img src="assets/ancient-architecture-blue-sky-287332.jpg">
+</div>
+<div class="col-6">
+<h1>Personal Portfolios</h1>
+<img src="assets/camera-canon-dlsr-169928.jpg">
+</div>
 </div>
 
-<div class="projects">
-<div>
-<h2>Meagan Linville Photography</h2>
-</div>
-
-</div>
 </body>
+
+<footer>
+<div class="social-1">
+<a class="fa fa-facebook"></a>
+<a class="fa fa-twitter"></a>
+<a class="fa fa-linkedin"></a>
+<a class="fa fa-github"></a>
+</div>
+
+<p>@2019 Shane Linville All rights reserved</p>
+
+</footer>
 </html>
