--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <div id="welcome" class="welcome">
 <div class="overlay">
 <h1>Shane Linville</h1>
-<h2>Web Developer</h2>
+<h2>Front End Web Developer</h2>
+<p>Small Business * Non-Profit * Portfolios</p>
+
 <a href="home.html">Enter</a>
 </div>
 </div>
 </body>
-
 </html>
