--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 <li><a href="#work.html">Work</a></li>
 <li> <a href="#contact.html">Contact</a></li>
 <li><a href="#experience.html">Experience</a></li>
-<li><a href="#https://shanelinville.github.io/blog/">Blog</a></li>
+<li><a href="https://shanelinville.github.io/blog/">Blog</a></li>
 </ul>
 </nav>
 <body>
