--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                         <div>
                             <p>I'm Shane</p>
                             <p>Kanasas City, Missouri</p>
-                            <p class="font-weight-bold">Contact:</p>
-                            <p><a>Shane.Linville@outlook.com</a></p>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" data-whatever="@mdo">Send a Message</button>
                         </div>
                         <div>
                             <p class="font-weight-bold">Education:</p>
